--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#root {
+  max-width: 1280px;
+  width: 350px;
+  height:600px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0 auto;
+  /* justify-content: center; */
+  text-align: center;
+  align-items:center;
+  background-color:#1a1c22;
+}
+.header{
+  /* display:flex;
+  justify-content:center; */
+  width:350px;
+  height:310px;
+  /* border:4px solid red; */
+  margin: 0;
+}
+.about{
+  margin:0;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  width:350px;
+  height: 250px;
+  /* border: 1px solid blue; */
+  flex-direction: column;
+  /* padding: 0 5px; */
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer{
+  padding-top:5px;
+  padding-bottom:3px;
+  display:flex;
+  justify-content: space-around;
+  align-items:bottom;
+  width:350px;
+  height:50px;
+  background-color:#161618;
 }
